// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dynamic imports babel transforms example test case: browser-current-esm 1`] = `
[
  "esm/bundle-1bc8bc6c.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: current, Format: esm

function foo() {}
function bar() {}
export { bar, foo };
//# sourceMappingURL=bundle-1bc8bc6c.js.map
",
]
`;

exports[`Dynamic imports babel transforms example test case: browser-current-esm 2`] = `
[
  "esm/index-browser-current-esm.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: current, Format: esm

import('./bundle-1bc8bc6c.js').then(result => {
  result.foo();
});
import( /* webpackChunkName: "helpers" */'./bundle-1bc8bc6c.js').then(({
  bar
}) => {
  bar();
});
//# sourceMappingURL=index-browser-current-esm.js.map
",
]
`;

exports[`Dynamic imports babel transforms example test case: browser-current-lib 1`] = `
[
  "lib/bundle-b8bd2771.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: current, Format: lib

'use strict';

function foo() {}
function bar() {}
exports.bar = bar;
exports.foo = foo;
//# sourceMappingURL=bundle-b8bd2771.js.map
",
]
`;

exports[`Dynamic imports babel transforms example test case: browser-current-lib 2`] = `
[
  "lib/index-browser-current-lib.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: current, Format: lib

'use strict';

import('./bundle-b8bd2771.js').then(result => {
  result.foo();
});
import( /* webpackChunkName: "helpers" */'./bundle-b8bd2771.js').then(({
  bar
}) => {
  bar();
});
//# sourceMappingURL=index-browser-current-lib.js.map
",
]
`;

exports[`Dynamic imports babel transforms example test case: browser-current-umd 1`] = `
[
  "umd/bundle-030a0739.js",
  "(function (global, factory) {
  if (typeof define === "function" && define.amd) {
    define(["exports"], factory);
  } else if (typeof exports !== "undefined") {
    factory(exports);
  } else {
    var mod = {
      exports: {}
    };
    factory(mod.exports);
    global.examples = mod.exports;
  }
})(typeof globalThis !== "undefined" ? globalThis : typeof self !== "undefined" ? self : this, function (_exports) {
  "use strict";

  Object.defineProperty(_exports, "__esModule", {
    value: true
  });
  _exports.bar = bar;
  _exports.foo = foo;
  // Bundled with Packemon: https://packemon.dev
  // Platform: browser, Support: current, Format: umd

  function foo() {}
  function bar() {}
});
//# sourceMappingURL=bundle-030a0739.js.map
",
]
`;

exports[`Dynamic imports babel transforms example test case: browser-current-umd 2`] = `
[
  "umd/index-browser-current-umd.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: current, Format: umd

import('./bundle-030a0739.js').then(result => {
  result.foo();
});
import( /* webpackChunkName: "helpers" */'./bundle-030a0739.js').then(({
  bar
}) => {
  bar();
});
//# sourceMappingURL=index-browser-current-umd.js.map
",
]
`;

exports[`Dynamic imports babel transforms example test case: browser-experimental-esm 1`] = `
[
  "esm/bundle-e79ac686.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: experimental, Format: esm

function foo() {}
function bar() {}
export { bar, foo };
//# sourceMappingURL=bundle-e79ac686.js.map
",
]
`;

exports[`Dynamic imports babel transforms example test case: browser-experimental-esm 2`] = `
[
  "esm/index-browser-experimental-esm.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: experimental, Format: esm

import('./bundle-e79ac686.js').then(result => {
  result.foo();
});
import( /* webpackChunkName: "helpers" */'./bundle-e79ac686.js').then(({
  bar
}) => {
  bar();
});
//# sourceMappingURL=index-browser-experimental-esm.js.map
",
]
`;

exports[`Dynamic imports babel transforms example test case: browser-experimental-lib 1`] = `
[
  "lib/bundle-c50d6f28.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: experimental, Format: lib

'use strict';

function foo() {}
function bar() {}
exports.bar = bar;
exports.foo = foo;
//# sourceMappingURL=bundle-c50d6f28.js.map
",
]
`;

exports[`Dynamic imports babel transforms example test case: browser-experimental-lib 2`] = `
[
  "lib/index-browser-experimental-lib.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: experimental, Format: lib

'use strict';

import('./bundle-c50d6f28.js').then(result => {
  result.foo();
});
import( /* webpackChunkName: "helpers" */'./bundle-c50d6f28.js').then(({
  bar
}) => {
  bar();
});
//# sourceMappingURL=index-browser-experimental-lib.js.map
",
]
`;

exports[`Dynamic imports babel transforms example test case: browser-experimental-umd 1`] = `
[
  "umd/bundle-4cd630b0.js",
  "(function (global, factory) {
  if (typeof define === "function" && define.amd) {
    define(["exports"], factory);
  } else if (typeof exports !== "undefined") {
    factory(exports);
  } else {
    var mod = {
      exports: {}
    };
    factory(mod.exports);
    global.examples = mod.exports;
  }
})(typeof globalThis !== "undefined" ? globalThis : typeof self !== "undefined" ? self : this, function (_exports) {
  "use strict";

  Object.defineProperty(_exports, "__esModule", {
    value: true
  });
  _exports.bar = bar;
  _exports.foo = foo;
  // Bundled with Packemon: https://packemon.dev
  // Platform: browser, Support: experimental, Format: umd

  function foo() {}
  function bar() {}
});
//# sourceMappingURL=bundle-4cd630b0.js.map
",
]
`;

exports[`Dynamic imports babel transforms example test case: browser-experimental-umd 2`] = `
[
  "umd/index-browser-experimental-umd.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: experimental, Format: umd

import('./bundle-4cd630b0.js').then(result => {
  result.foo();
});
import( /* webpackChunkName: "helpers" */'./bundle-4cd630b0.js').then(({
  bar
}) => {
  bar();
});
//# sourceMappingURL=index-browser-experimental-umd.js.map
",
]
`;

exports[`Dynamic imports babel transforms example test case: browser-legacy-esm 1`] = `
[
  "esm/bundle-cbaaee70.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: legacy, Format: esm

function foo() {}
function bar() {}
export { bar, foo };
//# sourceMappingURL=bundle-cbaaee70.js.map
",
]
`;

exports[`Dynamic imports babel transforms example test case: browser-legacy-esm 2`] = `
[
  "esm/index-browser-legacy-esm.js",
  "var _this = this;
function _newArrowCheck(innerThis, boundThis) { if (innerThis !== boundThis) { throw new TypeError("Cannot instantiate an arrow function"); } }
// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: legacy, Format: esm

import('./bundle-cbaaee70.js').then(function (result) {
  _newArrowCheck(this, _this);
  result.foo();
}.bind(this));
import( /* webpackChunkName: "helpers" */'./bundle-cbaaee70.js').then(function (_ref) {
  _newArrowCheck(this, _this);
  var bar = _ref.bar;
  bar();
}.bind(this));
//# sourceMappingURL=index-browser-legacy-esm.js.map
",
]
`;

exports[`Dynamic imports babel transforms example test case: browser-legacy-lib 1`] = `
[
  "lib/bundle-0c868d09.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: legacy, Format: lib

'use strict';

function foo() {}
function bar() {}
exports.bar = bar;
exports.foo = foo;
//# sourceMappingURL=bundle-0c868d09.js.map
",
]
`;

exports[`Dynamic imports babel transforms example test case: browser-legacy-lib 2`] = `
[
  "lib/index-browser-legacy-lib.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: legacy, Format: lib

'use strict';

var _this = this;
function _newArrowCheck(innerThis, boundThis) { if (innerThis !== boundThis) { throw new TypeError("Cannot instantiate an arrow function"); } }
import('./bundle-0c868d09.js').then(function (result) {
  _newArrowCheck(this, _this);
  result.foo();
}.bind(this));
import( /* webpackChunkName: "helpers" */'./bundle-0c868d09.js').then(function (_ref) {
  _newArrowCheck(this, _this);
  var bar = _ref.bar;
  bar();
}.bind(this));
//# sourceMappingURL=index-browser-legacy-lib.js.map
",
]
`;

exports[`Dynamic imports babel transforms example test case: browser-legacy-umd 1`] = `
[
  "umd/bundle-99a7a8e3.js",
  "(function (global, factory) {
  if (typeof define === "function" && define.amd) {
    define(["exports"], factory);
  } else if (typeof exports !== "undefined") {
    factory(exports);
  } else {
    var mod = {
      exports: {}
    };
    factory(mod.exports);
    global.examples = mod.exports;
  }
})(typeof globalThis !== "undefined" ? globalThis : typeof self !== "undefined" ? self : this, function (_exports) {
  "use strict";

  Object.defineProperty(_exports, "__esModule", {
    value: true
  });
  _exports.bar = bar;
  _exports.foo = foo;
  // Bundled with Packemon: https://packemon.dev
  // Platform: browser, Support: legacy, Format: umd

  function foo() {}
  function bar() {}
});
//# sourceMappingURL=bundle-99a7a8e3.js.map
",
]
`;

exports[`Dynamic imports babel transforms example test case: browser-legacy-umd 2`] = `
[
  "umd/index-browser-legacy-umd.js",
  "var _this = this;
function _newArrowCheck(innerThis, boundThis) { if (innerThis !== boundThis) { throw new TypeError("Cannot instantiate an arrow function"); } }
// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: legacy, Format: umd

import('./bundle-99a7a8e3.js').then(function (result) {
  _newArrowCheck(this, _this);
  result.foo();
}.bind(this));
import( /* webpackChunkName: "helpers" */'./bundle-99a7a8e3.js').then(function (_ref) {
  _newArrowCheck(this, _this);
  var bar = _ref.bar;
  bar();
}.bind(this));
//# sourceMappingURL=index-browser-legacy-umd.js.map
",
]
`;

exports[`Dynamic imports babel transforms example test case: browser-stable-esm 1`] = `
[
  "esm/bundle-32c07aef.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: stable, Format: esm

function foo() {}
function bar() {}
export { bar, foo };
//# sourceMappingURL=bundle-32c07aef.js.map
",
]
`;

exports[`Dynamic imports babel transforms example test case: browser-stable-esm 2`] = `
[
  "esm/index-browser-stable-esm.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: stable, Format: esm

import('./bundle-32c07aef.js').then(result => {
  result.foo();
});
import( /* webpackChunkName: "helpers" */'./bundle-32c07aef.js').then(({
  bar
}) => {
  bar();
});
//# sourceMappingURL=index-browser-stable-esm.js.map
",
]
`;

exports[`Dynamic imports babel transforms example test case: browser-stable-lib 1`] = `
[
  "lib/bundle-a1d8f7d2.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: stable, Format: lib

'use strict';

function foo() {}
function bar() {}
exports.bar = bar;
exports.foo = foo;
//# sourceMappingURL=bundle-a1d8f7d2.js.map
",
]
`;

exports[`Dynamic imports babel transforms example test case: browser-stable-lib 2`] = `
[
  "lib/index-browser-stable-lib.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: stable, Format: lib

'use strict';

import('./bundle-a1d8f7d2.js').then(result => {
  result.foo();
});
import( /* webpackChunkName: "helpers" */'./bundle-a1d8f7d2.js').then(({
  bar
}) => {
  bar();
});
//# sourceMappingURL=index-browser-stable-lib.js.map
",
]
`;

exports[`Dynamic imports babel transforms example test case: browser-stable-umd 1`] = `
[
  "umd/bundle-adfd6fef.js",
  "(function (global, factory) {
  if (typeof define === "function" && define.amd) {
    define(["exports"], factory);
  } else if (typeof exports !== "undefined") {
    factory(exports);
  } else {
    var mod = {
      exports: {}
    };
    factory(mod.exports);
    global.examples = mod.exports;
  }
})(typeof globalThis !== "undefined" ? globalThis : typeof self !== "undefined" ? self : this, function (_exports) {
  "use strict";

  Object.defineProperty(_exports, "__esModule", {
    value: true
  });
  _exports.bar = bar;
  _exports.foo = foo;
  // Bundled with Packemon: https://packemon.dev
  // Platform: browser, Support: stable, Format: umd

  function foo() {}
  function bar() {}
});
//# sourceMappingURL=bundle-adfd6fef.js.map
",
]
`;

exports[`Dynamic imports babel transforms example test case: browser-stable-umd 2`] = `
[
  "umd/index-browser-stable-umd.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: stable, Format: umd

import('./bundle-adfd6fef.js').then(result => {
  result.foo();
});
import( /* webpackChunkName: "helpers" */'./bundle-adfd6fef.js').then(({
  bar
}) => {
  bar();
});
//# sourceMappingURL=index-browser-stable-umd.js.map
",
]
`;

exports[`Dynamic imports babel transforms example test case: native-current-lib 1`] = `
[
  "lib/bundle-99524a7a.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: native, Support: current, Format: lib

'use strict';

function foo() {}
function bar() {}
exports.bar = bar;
exports.foo = foo;
//# sourceMappingURL=bundle-99524a7a.js.map
",
]
`;

exports[`Dynamic imports babel transforms example test case: native-current-lib 2`] = `
[
  "lib/index-native-current-lib.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: native, Support: current, Format: lib

'use strict';

Promise.resolve().then(() => require('./bundle-99524a7a.js')).then(result => {
  result.foo();
});
Promise.resolve().then(() => require( /* webpackChunkName: "helpers" */'./bundle-99524a7a.js')).then(({
  bar
}) => {
  bar();
});
//# sourceMappingURL=index-native-current-lib.js.map
",
]
`;

exports[`Dynamic imports babel transforms example test case: native-experimental-lib 1`] = `
[
  "lib/bundle-c8d5fd50.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: native, Support: experimental, Format: lib

'use strict';

function foo() {}
function bar() {}
exports.bar = bar;
exports.foo = foo;
//# sourceMappingURL=bundle-c8d5fd50.js.map
",
]
`;

exports[`Dynamic imports babel transforms example test case: native-experimental-lib 2`] = `
[
  "lib/index-native-experimental-lib.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: native, Support: experimental, Format: lib

'use strict';

Promise.resolve().then(() => require('./bundle-c8d5fd50.js')).then(result => {
  result.foo();
});
Promise.resolve().then(() => require( /* webpackChunkName: "helpers" */'./bundle-c8d5fd50.js')).then(({
  bar
}) => {
  bar();
});
//# sourceMappingURL=index-native-experimental-lib.js.map
",
]
`;

exports[`Dynamic imports babel transforms example test case: native-legacy-lib 1`] = `
[
  "lib/bundle-399daa32.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: native, Support: legacy, Format: lib

'use strict';

function foo() {}
function bar() {}
exports.bar = bar;
exports.foo = foo;
//# sourceMappingURL=bundle-399daa32.js.map
",
]
`;

exports[`Dynamic imports babel transforms example test case: native-legacy-lib 2`] = `
[
  "lib/index-native-legacy-lib.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: native, Support: legacy, Format: lib

'use strict';

Promise.resolve().then(() => require('./bundle-399daa32.js')).then(result => {
  result.foo();
});
Promise.resolve().then(() => require( /* webpackChunkName: "helpers" */'./bundle-399daa32.js')).then(({
  bar
}) => {
  bar();
});
//# sourceMappingURL=index-native-legacy-lib.js.map
",
]
`;

exports[`Dynamic imports babel transforms example test case: native-stable-lib 1`] = `
[
  "lib/bundle-14db0c55.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: native, Support: stable, Format: lib

'use strict';

function foo() {}
function bar() {}
exports.bar = bar;
exports.foo = foo;
//# sourceMappingURL=bundle-14db0c55.js.map
",
]
`;

exports[`Dynamic imports babel transforms example test case: native-stable-lib 2`] = `
[
  "lib/index-native-stable-lib.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: native, Support: stable, Format: lib

'use strict';

Promise.resolve().then(() => require('./bundle-14db0c55.js')).then(result => {
  result.foo();
});
Promise.resolve().then(() => require( /* webpackChunkName: "helpers" */'./bundle-14db0c55.js')).then(({
  bar
}) => {
  bar();
});
//# sourceMappingURL=index-native-stable-lib.js.map
",
]
`;

exports[`Dynamic imports babel transforms example test case: node-current-cjs 1`] = `
[
  "cjs/bundle-be5cf5e2.cjs",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: current, Format: cjs

'use strict';

function foo() {}
function bar() {}
exports.bar = bar;
exports.foo = foo;
//# sourceMappingURL=bundle-be5cf5e2.cjs.map
",
]
`;

exports[`Dynamic imports babel transforms example test case: node-current-cjs 2`] = `
[
  "cjs/index-node-current-cjs-wrapper.mjs",
  "// Bundled with Packemon: https://packemon.dev
// This is an MJS wrapper for a sibling CJS file

import './index-node-current-cjs.cjs';",
]
`;

exports[`Dynamic imports babel transforms example test case: node-current-cjs 3`] = `
[
  "cjs/index-node-current-cjs.cjs",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: current, Format: cjs

'use strict';

import('./bundle-be5cf5e2.cjs').then(result => {
  result.foo();
});
import( /* webpackChunkName: "helpers" */'./bundle-be5cf5e2.cjs').then(({
  bar
}) => {
  bar();
});
//# sourceMappingURL=index-node-current-cjs.cjs.map
",
]
`;

exports[`Dynamic imports babel transforms example test case: node-current-lib 1`] = `
[
  "lib/bundle-b574f112.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: current, Format: lib

'use strict';

function foo() {}
function bar() {}
exports.bar = bar;
exports.foo = foo;
//# sourceMappingURL=bundle-b574f112.js.map
",
]
`;

exports[`Dynamic imports babel transforms example test case: node-current-lib 2`] = `
[
  "lib/index-node-current-lib.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: current, Format: lib

'use strict';

import('./bundle-b574f112.js').then(result => {
  result.foo();
});
import( /* webpackChunkName: "helpers" */'./bundle-b574f112.js').then(({
  bar
}) => {
  bar();
});
//# sourceMappingURL=index-node-current-lib.js.map
",
]
`;

exports[`Dynamic imports babel transforms example test case: node-current-mjs 1`] = `
[
  "mjs/bundle-1c4667ee.mjs",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: current, Format: mjs

function foo() {}
function bar() {}
export { bar, foo };
//# sourceMappingURL=bundle-1c4667ee.mjs.map
",
]
`;

exports[`Dynamic imports babel transforms example test case: node-current-mjs 2`] = `
[
  "mjs/index-node-current-mjs.mjs",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: current, Format: mjs

import('./bundle-1c4667ee.mjs').then(result => {
  result.foo();
});
import( /* webpackChunkName: "helpers" */'./bundle-1c4667ee.mjs').then(({
  bar
}) => {
  bar();
});
//# sourceMappingURL=index-node-current-mjs.mjs.map
",
]
`;

exports[`Dynamic imports babel transforms example test case: node-experimental-cjs 1`] = `
[
  "cjs/bundle-aca4e497.cjs",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: experimental, Format: cjs

'use strict';

function foo() {}
function bar() {}
exports.bar = bar;
exports.foo = foo;
//# sourceMappingURL=bundle-aca4e497.cjs.map
",
]
`;

exports[`Dynamic imports babel transforms example test case: node-experimental-cjs 2`] = `
[
  "cjs/index-node-experimental-cjs-wrapper.mjs",
  "// Bundled with Packemon: https://packemon.dev
// This is an MJS wrapper for a sibling CJS file

import './index-node-experimental-cjs.cjs';",
]
`;

exports[`Dynamic imports babel transforms example test case: node-experimental-cjs 3`] = `
[
  "cjs/index-node-experimental-cjs.cjs",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: experimental, Format: cjs

'use strict';

import('./bundle-aca4e497.cjs').then(result => {
  result.foo();
});
import( /* webpackChunkName: "helpers" */'./bundle-aca4e497.cjs').then(({
  bar
}) => {
  bar();
});
//# sourceMappingURL=index-node-experimental-cjs.cjs.map
",
]
`;

exports[`Dynamic imports babel transforms example test case: node-experimental-lib 1`] = `
[
  "lib/bundle-6879caf9.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: experimental, Format: lib

'use strict';

function foo() {}
function bar() {}
exports.bar = bar;
exports.foo = foo;
//# sourceMappingURL=bundle-6879caf9.js.map
",
]
`;

exports[`Dynamic imports babel transforms example test case: node-experimental-lib 2`] = `
[
  "lib/index-node-experimental-lib.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: experimental, Format: lib

'use strict';

import('./bundle-6879caf9.js').then(result => {
  result.foo();
});
import( /* webpackChunkName: "helpers" */'./bundle-6879caf9.js').then(({
  bar
}) => {
  bar();
});
//# sourceMappingURL=index-node-experimental-lib.js.map
",
]
`;

exports[`Dynamic imports babel transforms example test case: node-experimental-mjs 1`] = `
[
  "mjs/bundle-bacbd395.mjs",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: experimental, Format: mjs

function foo() {}
function bar() {}
export { bar, foo };
//# sourceMappingURL=bundle-bacbd395.mjs.map
",
]
`;

exports[`Dynamic imports babel transforms example test case: node-experimental-mjs 2`] = `
[
  "mjs/index-node-experimental-mjs.mjs",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: experimental, Format: mjs

import('./bundle-bacbd395.mjs').then(result => {
  result.foo();
});
import( /* webpackChunkName: "helpers" */'./bundle-bacbd395.mjs').then(({
  bar
}) => {
  bar();
});
//# sourceMappingURL=index-node-experimental-mjs.mjs.map
",
]
`;

exports[`Dynamic imports babel transforms example test case: node-legacy-cjs 1`] = `
[
  "cjs/bundle-adbf1ba7.cjs",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: legacy, Format: cjs

'use strict';

function foo() {}
function bar() {}
exports.bar = bar;
exports.foo = foo;
//# sourceMappingURL=bundle-adbf1ba7.cjs.map
",
]
`;

exports[`Dynamic imports babel transforms example test case: node-legacy-cjs 2`] = `
[
  "cjs/index-node-legacy-cjs-wrapper.mjs",
  "// Bundled with Packemon: https://packemon.dev
// This is an MJS wrapper for a sibling CJS file

import './index-node-legacy-cjs.cjs';",
]
`;

exports[`Dynamic imports babel transforms example test case: node-legacy-cjs 3`] = `
[
  "cjs/index-node-legacy-cjs.cjs",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: legacy, Format: cjs

'use strict';

Promise.resolve().then(() => require('./bundle-adbf1ba7.cjs')).then(result => {
  result.foo();
});
Promise.resolve().then(() => require( /* webpackChunkName: "helpers" */'./bundle-adbf1ba7.cjs')).then(({
  bar
}) => {
  bar();
});
//# sourceMappingURL=index-node-legacy-cjs.cjs.map
",
]
`;

exports[`Dynamic imports babel transforms example test case: node-legacy-lib 1`] = `
[
  "lib/bundle-0da238d9.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: legacy, Format: lib

'use strict';

function foo() {}
function bar() {}
exports.bar = bar;
exports.foo = foo;
//# sourceMappingURL=bundle-0da238d9.js.map
",
]
`;

exports[`Dynamic imports babel transforms example test case: node-legacy-lib 2`] = `
[
  "lib/index-node-legacy-lib.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: legacy, Format: lib

'use strict';

Promise.resolve().then(() => require('./bundle-0da238d9.js')).then(result => {
  result.foo();
});
Promise.resolve().then(() => require( /* webpackChunkName: "helpers" */'./bundle-0da238d9.js')).then(({
  bar
}) => {
  bar();
});
//# sourceMappingURL=index-node-legacy-lib.js.map
",
]
`;

exports[`Dynamic imports babel transforms example test case: node-legacy-mjs 1`] = `
[
  "mjs/bundle-f11f9b7f.mjs",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: legacy, Format: mjs

function foo() {}
function bar() {}
export { bar, foo };
//# sourceMappingURL=bundle-f11f9b7f.mjs.map
",
]
`;

exports[`Dynamic imports babel transforms example test case: node-legacy-mjs 2`] = `
[
  "mjs/index-node-legacy-mjs.mjs",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: legacy, Format: mjs

import('./bundle-f11f9b7f.mjs').then(result => {
  result.foo();
});
import( /* webpackChunkName: "helpers" */'./bundle-f11f9b7f.mjs').then(({
  bar
}) => {
  bar();
});
//# sourceMappingURL=index-node-legacy-mjs.mjs.map
",
]
`;

exports[`Dynamic imports babel transforms example test case: node-stable-cjs 1`] = `
[
  "cjs/bundle-922b7d15.cjs",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: stable, Format: cjs

'use strict';

function foo() {}
function bar() {}
exports.bar = bar;
exports.foo = foo;
//# sourceMappingURL=bundle-922b7d15.cjs.map
",
]
`;

exports[`Dynamic imports babel transforms example test case: node-stable-cjs 2`] = `
[
  "cjs/index-node-stable-cjs-wrapper.mjs",
  "// Bundled with Packemon: https://packemon.dev
// This is an MJS wrapper for a sibling CJS file

import './index-node-stable-cjs.cjs';",
]
`;

exports[`Dynamic imports babel transforms example test case: node-stable-cjs 3`] = `
[
  "cjs/index-node-stable-cjs.cjs",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: stable, Format: cjs

'use strict';

import('./bundle-922b7d15.cjs').then(result => {
  result.foo();
});
import( /* webpackChunkName: "helpers" */'./bundle-922b7d15.cjs').then(({
  bar
}) => {
  bar();
});
//# sourceMappingURL=index-node-stable-cjs.cjs.map
",
]
`;

exports[`Dynamic imports babel transforms example test case: node-stable-lib 1`] = `
[
  "lib/bundle-75d21bac.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: stable, Format: lib

'use strict';

function foo() {}
function bar() {}
exports.bar = bar;
exports.foo = foo;
//# sourceMappingURL=bundle-75d21bac.js.map
",
]
`;

exports[`Dynamic imports babel transforms example test case: node-stable-lib 2`] = `
[
  "lib/index-node-stable-lib.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: stable, Format: lib

'use strict';

import('./bundle-75d21bac.js').then(result => {
  result.foo();
});
import( /* webpackChunkName: "helpers" */'./bundle-75d21bac.js').then(({
  bar
}) => {
  bar();
});
//# sourceMappingURL=index-node-stable-lib.js.map
",
]
`;

exports[`Dynamic imports babel transforms example test case: node-stable-mjs 1`] = `
[
  "mjs/bundle-0856c0d8.mjs",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: stable, Format: mjs

function foo() {}
function bar() {}
export { bar, foo };
//# sourceMappingURL=bundle-0856c0d8.mjs.map
",
]
`;

exports[`Dynamic imports babel transforms example test case: node-stable-mjs 2`] = `
[
  "mjs/index-node-stable-mjs.mjs",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: stable, Format: mjs

import('./bundle-0856c0d8.mjs').then(result => {
  result.foo();
});
import( /* webpackChunkName: "helpers" */'./bundle-0856c0d8.mjs').then(({
  bar
}) => {
  bar();
});
//# sourceMappingURL=index-node-stable-mjs.mjs.map
",
]
`;

exports[`Dynamic imports swc transforms example test case: browser-current-esm 1`] = `
[
  "esm/bundle-1bc8bc6c.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: current, Format: esm
function foo() {}
function bar() {}
export { bar, foo };
//# sourceMappingURL=bundle-1bc8bc6c.js.map
",
]
`;

exports[`Dynamic imports swc transforms example test case: browser-current-esm 2`] = `
[
  "esm/index-browser-current-esm.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: current, Format: esm
import('./bundle-1bc8bc6c.js').then((result)=>{
    result.foo();
});
import(/* webpackChunkName: "helpers" */ './bundle-1bc8bc6c.js').then(({ bar  })=>{
    bar();
});
//# sourceMappingURL=index-browser-current-esm.js.map
",
]
`;

exports[`Dynamic imports swc transforms example test case: browser-current-lib 1`] = `
[
  "lib/bundle-b8bd2771.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: current, Format: lib
'use strict';
function foo() {}
function bar() {}
exports.bar = bar;
exports.foo = foo;
//# sourceMappingURL=bundle-b8bd2771.js.map
",
]
`;

exports[`Dynamic imports swc transforms example test case: browser-current-lib 2`] = `
[
  "lib/index-browser-current-lib.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: current, Format: lib
'use strict';
import('./bundle-b8bd2771.js').then((result)=>{
    result.foo();
});
import(/* webpackChunkName: "helpers" */ './bundle-b8bd2771.js').then(({ bar  })=>{
    bar();
});
//# sourceMappingURL=index-browser-current-lib.js.map
",
]
`;

exports[`Dynamic imports swc transforms example test case: browser-current-umd 1`] = `
[
  "umd/bundle-ca4fc8e9.js",
  "(function(global, factory) {
    if (typeof module === "object" && typeof module.exports === "object") factory(exports);
    else if (typeof define === "function" && define.amd) define([
        "exports"
    ], factory);
    else if (global = typeof globalThis !== "undefined" ? globalThis : global || self) factory(global.examples = {});
})(this, function(exports) {
    "use strict";
    Object.defineProperty(exports, "__esModule", {
        value: true
    });
    function _export(target, all) {
        for(var name in all)Object.defineProperty(target, name, {
            enumerable: true,
            get: all[name]
        });
    }
    _export(exports, {
        bar: ()=>bar,
        foo: ()=>foo
    });
    function foo() {}
    function bar() {}
});
//# sourceMappingURL=bundle-ca4fc8e9.js.map
",
]
`;

exports[`Dynamic imports swc transforms example test case: browser-current-umd 2`] = `
[
  "umd/index-browser-current-umd.js",
  "(function(global, factory) {
    if (typeof module === "object" && typeof module.exports === "object") factory();
    else if (typeof define === "function" && define.amd) define([], factory);
    else if (global = typeof globalThis !== "undefined" ? globalThis : global || self) factory();
})(this, function() {
    "use strict";
    import('./bundle-ca4fc8e9.js').then((result)=>{
        result.foo();
    });
    import(/* webpackChunkName: "helpers" */ './bundle-ca4fc8e9.js').then(({ bar  })=>{
        bar();
    });
});
//# sourceMappingURL=index-browser-current-umd.js.map
",
]
`;

exports[`Dynamic imports swc transforms example test case: browser-experimental-esm 1`] = `
[
  "esm/bundle-e79ac686.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: experimental, Format: esm
function foo() {}
function bar() {}
export { bar, foo };
//# sourceMappingURL=bundle-e79ac686.js.map
",
]
`;

exports[`Dynamic imports swc transforms example test case: browser-experimental-esm 2`] = `
[
  "esm/index-browser-experimental-esm.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: experimental, Format: esm
import('./bundle-e79ac686.js').then((result)=>{
    result.foo();
});
import(/* webpackChunkName: "helpers" */ './bundle-e79ac686.js').then(({ bar  })=>{
    bar();
});
//# sourceMappingURL=index-browser-experimental-esm.js.map
",
]
`;

exports[`Dynamic imports swc transforms example test case: browser-experimental-lib 1`] = `
[
  "lib/bundle-c50d6f28.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: experimental, Format: lib
'use strict';
function foo() {}
function bar() {}
exports.bar = bar;
exports.foo = foo;
//# sourceMappingURL=bundle-c50d6f28.js.map
",
]
`;

exports[`Dynamic imports swc transforms example test case: browser-experimental-lib 2`] = `
[
  "lib/index-browser-experimental-lib.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: experimental, Format: lib
'use strict';
import('./bundle-c50d6f28.js').then((result)=>{
    result.foo();
});
import(/* webpackChunkName: "helpers" */ './bundle-c50d6f28.js').then(({ bar  })=>{
    bar();
});
//# sourceMappingURL=index-browser-experimental-lib.js.map
",
]
`;

exports[`Dynamic imports swc transforms example test case: browser-experimental-umd 1`] = `
[
  "umd/bundle-ca4fc8e9.js",
  "(function(global, factory) {
    if (typeof module === "object" && typeof module.exports === "object") factory(exports);
    else if (typeof define === "function" && define.amd) define([
        "exports"
    ], factory);
    else if (global = typeof globalThis !== "undefined" ? globalThis : global || self) factory(global.examples = {});
})(this, function(exports) {
    "use strict";
    Object.defineProperty(exports, "__esModule", {
        value: true
    });
    function _export(target, all) {
        for(var name in all)Object.defineProperty(target, name, {
            enumerable: true,
            get: all[name]
        });
    }
    _export(exports, {
        bar: ()=>bar,
        foo: ()=>foo
    });
    function foo() {}
    function bar() {}
});
//# sourceMappingURL=bundle-ca4fc8e9.js.map
",
]
`;

exports[`Dynamic imports swc transforms example test case: browser-experimental-umd 2`] = `
[
  "umd/index-browser-experimental-umd.js",
  "(function(global, factory) {
    if (typeof module === "object" && typeof module.exports === "object") factory();
    else if (typeof define === "function" && define.amd) define([], factory);
    else if (global = typeof globalThis !== "undefined" ? globalThis : global || self) factory();
})(this, function() {
    "use strict";
    import('./bundle-ca4fc8e9.js').then((result)=>{
        result.foo();
    });
    import(/* webpackChunkName: "helpers" */ './bundle-ca4fc8e9.js').then(({ bar  })=>{
        bar();
    });
});
//# sourceMappingURL=index-browser-experimental-umd.js.map
",
]
`;

exports[`Dynamic imports swc transforms example test case: browser-legacy-esm 1`] = `
[
  "esm/bundle-cbaaee70.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: legacy, Format: esm
function foo() {}
function bar() {}
export { bar, foo };
//# sourceMappingURL=bundle-cbaaee70.js.map
",
]
`;

exports[`Dynamic imports swc transforms example test case: browser-legacy-esm 2`] = `
[
  "esm/index-browser-legacy-esm.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: legacy, Format: esm
import("./bundle-cbaaee70.js").then(function(result) {
    result.foo();
});
import(/* webpackChunkName: "helpers" */ "./bundle-cbaaee70.js").then(function(param) {
    var bar = param.bar;
    bar();
});
//# sourceMappingURL=index-browser-legacy-esm.js.map
",
]
`;

exports[`Dynamic imports swc transforms example test case: browser-legacy-lib 1`] = `
[
  "lib/bundle-0c868d09.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: legacy, Format: lib
"use strict";
function foo() {}
function bar() {}
exports.bar = bar;
exports.foo = foo;
//# sourceMappingURL=bundle-0c868d09.js.map
",
]
`;

exports[`Dynamic imports swc transforms example test case: browser-legacy-lib 2`] = `
[
  "lib/index-browser-legacy-lib.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: legacy, Format: lib
"use strict";
import("./bundle-0c868d09.js").then(function(result) {
    result.foo();
});
import(/* webpackChunkName: "helpers" */ "./bundle-0c868d09.js").then(function(param) {
    var bar = param.bar;
    bar();
});
//# sourceMappingURL=index-browser-legacy-lib.js.map
",
]
`;

exports[`Dynamic imports swc transforms example test case: browser-legacy-umd 1`] = `
[
  "umd/bundle-ca4fc8e9.js",
  "(function(global, factory) {
    if (typeof module === "object" && typeof module.exports === "object") factory(exports);
    else if (typeof define === "function" && define.amd) define([
        "exports"
    ], factory);
    else if (global = typeof globalThis !== "undefined" ? globalThis : global || self) factory(global.examples = {});
})(this, function(exports) {
    "use strict";
    Object.defineProperty(exports, "__esModule", {
        value: true
    });
    function _export(target, all) {
        for(var name in all)Object.defineProperty(target, name, {
            enumerable: true,
            get: all[name]
        });
    }
    _export(exports, {
        bar: function() {
            return bar;
        },
        foo: function() {
            return foo;
        }
    });
    function foo() {}
    function bar() {}
});
//# sourceMappingURL=bundle-ca4fc8e9.js.map
",
]
`;

exports[`Dynamic imports swc transforms example test case: browser-legacy-umd 2`] = `
[
  "umd/index-browser-legacy-umd.js",
  "(function(global, factory) {
    if (typeof module === "object" && typeof module.exports === "object") factory();
    else if (typeof define === "function" && define.amd) define([], factory);
    else if (global = typeof globalThis !== "undefined" ? globalThis : global || self) factory();
})(this, function() {
    "use strict";
    import("./bundle-ca4fc8e9.js").then(function(result) {
        result.foo();
    });
    import(/* webpackChunkName: "helpers" */ "./bundle-ca4fc8e9.js").then(function(param) {
        var bar = param.bar;
        bar();
    });
});
//# sourceMappingURL=index-browser-legacy-umd.js.map
",
]
`;

exports[`Dynamic imports swc transforms example test case: browser-stable-esm 1`] = `
[
  "esm/bundle-32c07aef.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: stable, Format: esm
function foo() {}
function bar() {}
export { bar, foo };
//# sourceMappingURL=bundle-32c07aef.js.map
",
]
`;

exports[`Dynamic imports swc transforms example test case: browser-stable-esm 2`] = `
[
  "esm/index-browser-stable-esm.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: stable, Format: esm
import('./bundle-32c07aef.js').then((result)=>{
    result.foo();
});
import(/* webpackChunkName: "helpers" */ './bundle-32c07aef.js').then(({ bar  })=>{
    bar();
});
//# sourceMappingURL=index-browser-stable-esm.js.map
",
]
`;

exports[`Dynamic imports swc transforms example test case: browser-stable-lib 1`] = `
[
  "lib/bundle-a1d8f7d2.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: stable, Format: lib
'use strict';
function foo() {}
function bar() {}
exports.bar = bar;
exports.foo = foo;
//# sourceMappingURL=bundle-a1d8f7d2.js.map
",
]
`;

exports[`Dynamic imports swc transforms example test case: browser-stable-lib 2`] = `
[
  "lib/index-browser-stable-lib.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: stable, Format: lib
'use strict';
import('./bundle-a1d8f7d2.js').then((result)=>{
    result.foo();
});
import(/* webpackChunkName: "helpers" */ './bundle-a1d8f7d2.js').then(({ bar  })=>{
    bar();
});
//# sourceMappingURL=index-browser-stable-lib.js.map
",
]
`;

exports[`Dynamic imports swc transforms example test case: browser-stable-umd 1`] = `
[
  "umd/bundle-ca4fc8e9.js",
  "(function(global, factory) {
    if (typeof module === "object" && typeof module.exports === "object") factory(exports);
    else if (typeof define === "function" && define.amd) define([
        "exports"
    ], factory);
    else if (global = typeof globalThis !== "undefined" ? globalThis : global || self) factory(global.examples = {});
})(this, function(exports) {
    "use strict";
    Object.defineProperty(exports, "__esModule", {
        value: true
    });
    function _export(target, all) {
        for(var name in all)Object.defineProperty(target, name, {
            enumerable: true,
            get: all[name]
        });
    }
    _export(exports, {
        bar: ()=>bar,
        foo: ()=>foo
    });
    function foo() {}
    function bar() {}
});
//# sourceMappingURL=bundle-ca4fc8e9.js.map
",
]
`;

exports[`Dynamic imports swc transforms example test case: browser-stable-umd 2`] = `
[
  "umd/index-browser-stable-umd.js",
  "(function(global, factory) {
    if (typeof module === "object" && typeof module.exports === "object") factory();
    else if (typeof define === "function" && define.amd) define([], factory);
    else if (global = typeof globalThis !== "undefined" ? globalThis : global || self) factory();
})(this, function() {
    "use strict";
    import('./bundle-ca4fc8e9.js').then((result)=>{
        result.foo();
    });
    import(/* webpackChunkName: "helpers" */ './bundle-ca4fc8e9.js').then(({ bar  })=>{
        bar();
    });
});
//# sourceMappingURL=index-browser-stable-umd.js.map
",
]
`;

exports[`Dynamic imports swc transforms example test case: native-current-lib 1`] = `
[
  "lib/bundle-99524a7a.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: native, Support: current, Format: lib
'use strict';
function foo() {}
function bar() {}
exports.bar = bar;
exports.foo = foo;
//# sourceMappingURL=bundle-99524a7a.js.map
",
]
`;

exports[`Dynamic imports swc transforms example test case: native-current-lib 2`] = `
[
  "lib/index-native-current-lib.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: native, Support: current, Format: lib
'use strict';
Promise.resolve().then(()=>require('./bundle-99524a7a.js')).then((result)=>{
    result.foo();
});
Promise.resolve().then(()=>require(/* webpackChunkName: "helpers" */ './bundle-99524a7a.js')).then(({ bar  })=>{
    bar();
});
//# sourceMappingURL=index-native-current-lib.js.map
",
]
`;

exports[`Dynamic imports swc transforms example test case: native-experimental-lib 1`] = `
[
  "lib/bundle-c8d5fd50.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: native, Support: experimental, Format: lib
'use strict';
function foo() {}
function bar() {}
exports.bar = bar;
exports.foo = foo;
//# sourceMappingURL=bundle-c8d5fd50.js.map
",
]
`;

exports[`Dynamic imports swc transforms example test case: native-experimental-lib 2`] = `
[
  "lib/index-native-experimental-lib.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: native, Support: experimental, Format: lib
'use strict';
Promise.resolve().then(()=>require('./bundle-c8d5fd50.js')).then((result)=>{
    result.foo();
});
Promise.resolve().then(()=>require(/* webpackChunkName: "helpers" */ './bundle-c8d5fd50.js')).then(({ bar  })=>{
    bar();
});
//# sourceMappingURL=index-native-experimental-lib.js.map
",
]
`;

exports[`Dynamic imports swc transforms example test case: native-legacy-lib 1`] = `
[
  "lib/bundle-399daa32.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: native, Support: legacy, Format: lib
"use strict";
function foo() {}
function bar() {}
exports.bar = bar;
exports.foo = foo;
//# sourceMappingURL=bundle-399daa32.js.map
",
]
`;

exports[`Dynamic imports swc transforms example test case: native-legacy-lib 2`] = `
[
  "lib/index-native-legacy-lib.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: native, Support: legacy, Format: lib
"use strict";
Promise.resolve().then(()=>require("./bundle-399daa32.js")).then((result)=>{
    result.foo();
});
Promise.resolve().then(()=>require(/* webpackChunkName: "helpers" */ "./bundle-399daa32.js")).then(({ bar  })=>{
    bar();
});
//# sourceMappingURL=index-native-legacy-lib.js.map
",
]
`;

exports[`Dynamic imports swc transforms example test case: native-stable-lib 1`] = `
[
  "lib/bundle-14db0c55.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: native, Support: stable, Format: lib
'use strict';
function foo() {}
function bar() {}
exports.bar = bar;
exports.foo = foo;
//# sourceMappingURL=bundle-14db0c55.js.map
",
]
`;

exports[`Dynamic imports swc transforms example test case: native-stable-lib 2`] = `
[
  "lib/index-native-stable-lib.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: native, Support: stable, Format: lib
'use strict';
Promise.resolve().then(()=>require('./bundle-14db0c55.js')).then((result)=>{
    result.foo();
});
Promise.resolve().then(()=>require(/* webpackChunkName: "helpers" */ './bundle-14db0c55.js')).then(({ bar  })=>{
    bar();
});
//# sourceMappingURL=index-native-stable-lib.js.map
",
]
`;

exports[`Dynamic imports swc transforms example test case: node-current-cjs 1`] = `
[
  "cjs/bundle-be5cf5e2.cjs",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: current, Format: cjs
'use strict';
function foo() {}
function bar() {}
exports.bar = bar;
exports.foo = foo;
//# sourceMappingURL=bundle-be5cf5e2.cjs.map
",
]
`;

exports[`Dynamic imports swc transforms example test case: node-current-cjs 2`] = `
[
  "cjs/index-node-current-cjs-wrapper.mjs",
  "// Bundled with Packemon: https://packemon.dev
// This is an MJS wrapper for a sibling CJS file

import './index-node-current-cjs.cjs';",
]
`;

exports[`Dynamic imports swc transforms example test case: node-current-cjs 3`] = `
[
  "cjs/index-node-current-cjs.cjs",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: current, Format: cjs
'use strict';
import('./bundle-be5cf5e2.cjs').then((result)=>{
    result.foo();
});
import(/* webpackChunkName: "helpers" */ './bundle-be5cf5e2.cjs').then(({ bar  })=>{
    bar();
});
//# sourceMappingURL=index-node-current-cjs.cjs.map
",
]
`;

exports[`Dynamic imports swc transforms example test case: node-current-lib 1`] = `
[
  "lib/bundle-b574f112.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: current, Format: lib
'use strict';
function foo() {}
function bar() {}
exports.bar = bar;
exports.foo = foo;
//# sourceMappingURL=bundle-b574f112.js.map
",
]
`;

exports[`Dynamic imports swc transforms example test case: node-current-lib 2`] = `
[
  "lib/index-node-current-lib.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: current, Format: lib
'use strict';
import('./bundle-b574f112.js').then((result)=>{
    result.foo();
});
import(/* webpackChunkName: "helpers" */ './bundle-b574f112.js').then(({ bar  })=>{
    bar();
});
//# sourceMappingURL=index-node-current-lib.js.map
",
]
`;

exports[`Dynamic imports swc transforms example test case: node-current-mjs 1`] = `
[
  "mjs/bundle-1c4667ee.mjs",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: current, Format: mjs
function foo() {}
function bar() {}
export { bar, foo };
//# sourceMappingURL=bundle-1c4667ee.mjs.map
",
]
`;

exports[`Dynamic imports swc transforms example test case: node-current-mjs 2`] = `
[
  "mjs/index-node-current-mjs.mjs",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: current, Format: mjs
import('./bundle-1c4667ee.mjs').then((result)=>{
    result.foo();
});
import(/* webpackChunkName: "helpers" */ './bundle-1c4667ee.mjs').then(({ bar  })=>{
    bar();
});
//# sourceMappingURL=index-node-current-mjs.mjs.map
",
]
`;

exports[`Dynamic imports swc transforms example test case: node-experimental-cjs 1`] = `
[
  "cjs/bundle-aca4e497.cjs",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: experimental, Format: cjs
'use strict';
function foo() {}
function bar() {}
exports.bar = bar;
exports.foo = foo;
//# sourceMappingURL=bundle-aca4e497.cjs.map
",
]
`;

exports[`Dynamic imports swc transforms example test case: node-experimental-cjs 2`] = `
[
  "cjs/index-node-experimental-cjs-wrapper.mjs",
  "// Bundled with Packemon: https://packemon.dev
// This is an MJS wrapper for a sibling CJS file

import './index-node-experimental-cjs.cjs';",
]
`;

exports[`Dynamic imports swc transforms example test case: node-experimental-cjs 3`] = `
[
  "cjs/index-node-experimental-cjs.cjs",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: experimental, Format: cjs
'use strict';
import('./bundle-aca4e497.cjs').then((result)=>{
    result.foo();
});
import(/* webpackChunkName: "helpers" */ './bundle-aca4e497.cjs').then(({ bar  })=>{
    bar();
});
//# sourceMappingURL=index-node-experimental-cjs.cjs.map
",
]
`;

exports[`Dynamic imports swc transforms example test case: node-experimental-lib 1`] = `
[
  "lib/bundle-6879caf9.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: experimental, Format: lib
'use strict';
function foo() {}
function bar() {}
exports.bar = bar;
exports.foo = foo;
//# sourceMappingURL=bundle-6879caf9.js.map
",
]
`;

exports[`Dynamic imports swc transforms example test case: node-experimental-lib 2`] = `
[
  "lib/index-node-experimental-lib.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: experimental, Format: lib
'use strict';
import('./bundle-6879caf9.js').then((result)=>{
    result.foo();
});
import(/* webpackChunkName: "helpers" */ './bundle-6879caf9.js').then(({ bar  })=>{
    bar();
});
//# sourceMappingURL=index-node-experimental-lib.js.map
",
]
`;

exports[`Dynamic imports swc transforms example test case: node-experimental-mjs 1`] = `
[
  "mjs/bundle-bacbd395.mjs",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: experimental, Format: mjs
function foo() {}
function bar() {}
export { bar, foo };
//# sourceMappingURL=bundle-bacbd395.mjs.map
",
]
`;

exports[`Dynamic imports swc transforms example test case: node-experimental-mjs 2`] = `
[
  "mjs/index-node-experimental-mjs.mjs",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: experimental, Format: mjs
import('./bundle-bacbd395.mjs').then((result)=>{
    result.foo();
});
import(/* webpackChunkName: "helpers" */ './bundle-bacbd395.mjs').then(({ bar  })=>{
    bar();
});
//# sourceMappingURL=index-node-experimental-mjs.mjs.map
",
]
`;

exports[`Dynamic imports swc transforms example test case: node-legacy-cjs 1`] = `
[
  "cjs/bundle-adbf1ba7.cjs",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: legacy, Format: cjs
"use strict";
function foo() {}
function bar() {}
exports.bar = bar;
exports.foo = foo;
//# sourceMappingURL=bundle-adbf1ba7.cjs.map
",
]
`;

exports[`Dynamic imports swc transforms example test case: node-legacy-cjs 2`] = `
[
  "cjs/index-node-legacy-cjs-wrapper.mjs",
  "// Bundled with Packemon: https://packemon.dev
// This is an MJS wrapper for a sibling CJS file

import './index-node-legacy-cjs.cjs';",
]
`;

exports[`Dynamic imports swc transforms example test case: node-legacy-cjs 3`] = `
[
  "cjs/index-node-legacy-cjs.cjs",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: legacy, Format: cjs
"use strict";
Promise.resolve().then(()=>require("./bundle-adbf1ba7.cjs")).then((result)=>{
    result.foo();
});
Promise.resolve().then(()=>require(/* webpackChunkName: "helpers" */ "./bundle-adbf1ba7.cjs")).then(({ bar  })=>{
    bar();
});
//# sourceMappingURL=index-node-legacy-cjs.cjs.map
",
]
`;

exports[`Dynamic imports swc transforms example test case: node-legacy-lib 1`] = `
[
  "lib/bundle-0da238d9.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: legacy, Format: lib
"use strict";
function foo() {}
function bar() {}
exports.bar = bar;
exports.foo = foo;
//# sourceMappingURL=bundle-0da238d9.js.map
",
]
`;

exports[`Dynamic imports swc transforms example test case: node-legacy-lib 2`] = `
[
  "lib/index-node-legacy-lib.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: legacy, Format: lib
"use strict";
Promise.resolve().then(()=>require("./bundle-0da238d9.js")).then((result)=>{
    result.foo();
});
Promise.resolve().then(()=>require(/* webpackChunkName: "helpers" */ "./bundle-0da238d9.js")).then(({ bar  })=>{
    bar();
});
//# sourceMappingURL=index-node-legacy-lib.js.map
",
]
`;

exports[`Dynamic imports swc transforms example test case: node-legacy-mjs 1`] = `
[
  "mjs/bundle-f11f9b7f.mjs",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: legacy, Format: mjs
function foo() {}
function bar() {}
export { bar, foo };
//# sourceMappingURL=bundle-f11f9b7f.mjs.map
",
]
`;

exports[`Dynamic imports swc transforms example test case: node-legacy-mjs 2`] = `
[
  "mjs/index-node-legacy-mjs.mjs",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: legacy, Format: mjs
import("./bundle-f11f9b7f.mjs").then((result)=>{
    result.foo();
});
import(/* webpackChunkName: "helpers" */ "./bundle-f11f9b7f.mjs").then(({ bar  })=>{
    bar();
});
//# sourceMappingURL=index-node-legacy-mjs.mjs.map
",
]
`;

exports[`Dynamic imports swc transforms example test case: node-stable-cjs 1`] = `
[
  "cjs/bundle-922b7d15.cjs",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: stable, Format: cjs
'use strict';
function foo() {}
function bar() {}
exports.bar = bar;
exports.foo = foo;
//# sourceMappingURL=bundle-922b7d15.cjs.map
",
]
`;

exports[`Dynamic imports swc transforms example test case: node-stable-cjs 2`] = `
[
  "cjs/index-node-stable-cjs-wrapper.mjs",
  "// Bundled with Packemon: https://packemon.dev
// This is an MJS wrapper for a sibling CJS file

import './index-node-stable-cjs.cjs';",
]
`;

exports[`Dynamic imports swc transforms example test case: node-stable-cjs 3`] = `
[
  "cjs/index-node-stable-cjs.cjs",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: stable, Format: cjs
'use strict';
import('./bundle-922b7d15.cjs').then((result)=>{
    result.foo();
});
import(/* webpackChunkName: "helpers" */ './bundle-922b7d15.cjs').then(({ bar  })=>{
    bar();
});
//# sourceMappingURL=index-node-stable-cjs.cjs.map
",
]
`;

exports[`Dynamic imports swc transforms example test case: node-stable-lib 1`] = `
[
  "lib/bundle-75d21bac.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: stable, Format: lib
'use strict';
function foo() {}
function bar() {}
exports.bar = bar;
exports.foo = foo;
//# sourceMappingURL=bundle-75d21bac.js.map
",
]
`;

exports[`Dynamic imports swc transforms example test case: node-stable-lib 2`] = `
[
  "lib/index-node-stable-lib.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: stable, Format: lib
'use strict';
import('./bundle-75d21bac.js').then((result)=>{
    result.foo();
});
import(/* webpackChunkName: "helpers" */ './bundle-75d21bac.js').then(({ bar  })=>{
    bar();
});
//# sourceMappingURL=index-node-stable-lib.js.map
",
]
`;

exports[`Dynamic imports swc transforms example test case: node-stable-mjs 1`] = `
[
  "mjs/bundle-0856c0d8.mjs",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: stable, Format: mjs
function foo() {}
function bar() {}
export { bar, foo };
//# sourceMappingURL=bundle-0856c0d8.mjs.map
",
]
`;

exports[`Dynamic imports swc transforms example test case: node-stable-mjs 2`] = `
[
  "mjs/index-node-stable-mjs.mjs",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: stable, Format: mjs
import('./bundle-0856c0d8.mjs').then((result)=>{
    result.foo();
});
import(/* webpackChunkName: "helpers" */ './bundle-0856c0d8.mjs').then(({ bar  })=>{
    bar();
});
//# sourceMappingURL=index-node-stable-mjs.mjs.map
",
]
`;
